# whisper_web

./: .gitignore  AGENTS.md  CLAUDE.md  FASTER_WHISPER_RESEARCH.md  auth.py  config.py  db.py  index.html  login.html  main.py  models.py  pyproject.toml  readme.md  setup_linux.sh  srt_to_speech.html  start.sh  tts_timeline.html  whisper_web.service
.github/workflows/: deploy.yml
pages/: index.html  login.html  srt-to-speech.html  tts-timeline.html
routers/: auth.py  files.py  tts.py  whisper.py
utils/: audio_aligner.py  bidirection.py  srt_parser.py  volcengine_protocols.py
