[project]
name = "whisper-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "fastapi>=0.128.0",
    "fastapi-toolbox",
    "mutagen",
    "openai-whisper",
    "pydantic-settings>=2.11.0",
    "pydub",
    "python-multipart",
    "uvicorn",
    "websockets>=15.0.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
fastapi-toolbox = { git = "https://github.com/wynemo/fastapi-utils.git" }
