[project]
name = "whisper-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "fastapi>=0.128.0",
    "fastapi-toolbox",
    "mutagen",
    "openai-whisper",
    "pydantic-settings>=2.11.0",
    "pydub",
    "python-multipart",
    "sqlmodel>=0.0.27",
    "uvicorn",
    "websockets>=15.0.1",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
# faster-whisper 仅在 Linux 上支持，用于更快的转录速度
faster = ["faster-whisper>=1.0.0"]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
fastapi-toolbox = { git = "https://github.com/wynemo/fastapi-utils.git" }
